# createllm

./: .buildinfo  .gitignore  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  mkdocs.yml  objects.inv  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  sitemap.xml  test.txt  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  docs.yml  installation.yml  pypi.yml  python-publish.yml
_sources/: authors.rst.txt  contributing.rst.txt  history.rst.txt  installation.rst.txt  usage.rst.txt
changelog/: index.html
common/: index.html
contributing/: index.html
createllm/: CreateLLM.py  LICENSE  README.rst  __init__.py  index.html  pyproject.toml  requirements.txt  requirements_dev.txt
createllm/docs/: installation.rst  make.bat
createllm/tests/: __init__.py
docs/: Makefile  common.md  conf.py  contributing.md  contributing.rst  createllm.md  faq.md  index.md  index.rst  installation.md  installation.rst  usage.md  usage.rst
examples/: sample.txt  simple_example.py
examples/intro/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
src/createllm/: __init__.py  __main__.py  createllm.py
src/createllms/: __init__.py
tests/: test_createllm.py  test_createllms.py
usage/: index.html
