[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "createllm"
version = "0.1.9"
description = "A Python package that enables users to create and train their own Language Learning Models (LLMs) from scratch using custom datasets. This package provides a simplified approach to building, training, and deploying custom language models tailored to specific domains or use cases."
readme = "README.md"
authors = [
  {name = "Khushal Jethava", email = "khushaljethwa14@gmail.com"}
]
maintainers = [
  {name = "Khushal Jethava", email = "khushaljethwa14@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
license = {text = "MIT license"}
requires-python = ">=3.7"
dependencies = [
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "dataclasses>=0.6",
    "typing-extensions>=4.5.0"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "codespell"  # spelling
]

[project.urls]
bugs = "https://github.com/khushaljethava/createllm/issues"
changelog = "https://github.com/khushaljethava/createllm/blob/master/changelog.md"
homepage = "https://github.com/khushaljethava/createllm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["createllm*"]

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


[project.scripts]
createllm = "createllm.createllm:main"
